Bumped ktlint to 0.49.0